--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,12 @@ windows = { version = "0.39.0", features = [
       "Win32_Foundation",
       "Win32_System_Power",
       "Win32_System_SystemInformation",
-      "Win32_System_WindowsProgramming"
+      "Win32_System_WindowsProgramming",
+      "Win32_Devices_DeviceAndDriverInstallation",
+      "Win32_Storage_FileSystem",
+      "Win32_Security",
+      "Win32_System_IO",
+      "Win32_System_Diagnostics_Debug"
 ]}
 
 [target.'cfg(not(target_os = "windows"))'.dependencies]
